--- a/templates/office/office_home.html
+++ b/templates/office/office_home.html
@@ -12,7 +12,7 @@
 
 <style>
     .stock_box{
-        width: 400px;
+        width: 90%;
         margin: 0 auto;
         display: flex;
         flex-direction: column;
