--- a/templates/office/new_bill.html
+++ b/templates/office/new_bill.html
@@ -17,7 +17,7 @@
     .bill_main_box{
 
         margin: 0 auto;
-        width: 400px;
+        width: 98%;
         border: 1px solid black;
         text-align: center;
         margin-top: 10px;
