--- a/templates/office/completed_bills.html
+++ b/templates/office/completed_bills.html
@@ -15,12 +15,13 @@
         gap: 10px;
     }
     .card_box{
-        width: 350px;
+        width: 300px;
         height: fit-content;
         text-align: center;
         border: 1px solid black;
         border-radius: 10px;
         padding: 10px;
+        margin: 0 auto;
     }
     .flex{
         display: flex;
