--- a/templates/office/stock.html
+++ b/templates/office/stock.html
@@ -57,6 +57,10 @@
                 <input type="text" class="form-control" name="party_name" required>
             </div>
             <div class="mb-3">
+                <label for="">Purchase Amount</label>
+                <input type="text" class="form-control" name="purchase_amount" required>
+            </div>
+            <div class="mb-3">
                 <button type="submit" name="Add_stock" class="btn btn-success">Add</button>
             </div>
           </form>
