--- a/templates/office/office_home.html
+++ b/templates/office/office_home.html
@@ -87,6 +87,7 @@
                     <div>{{s.date}}</div>
                 </div>
             </div>
+            {% item_stock_summary employee.shope.id s.id %}
         </div>
     {% endfor %}
   </div>
