--- a/templates/include/office/office_menu.html
+++ b/templates/include/office/office_menu.html
@@ -11,7 +11,7 @@
     <a  href="/office/new_bill/" class="my-1 {% if request.path == '/office/new_bill/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">नवीन बिल </a>
     <a  href="/office/completed_bills/" class="my-1 {% if request.path == '/office/completed_bills/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">मागील बिले</a>
     <a  href="/office/stock/" class="my-1 {% if request.path == '/office/stock/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Stock</a>
-    <a  href="/office/report/" class="my-1 {% if request.path == '/office/report/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">रेपोर्ट</a>
+    <a  href="/office/report/" class="my-1 {% if request.path == '/office/report/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">रिपोर्ट</a>
     <a  href="/office/add_employee/" class="my-1 {% if request.path == '/office/add_employee/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Add Employee</a>
     <a  href="/office/item_category/" class="my-1 {% if request.path == '/office/item_category/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Category</a>
     <a href="/office_logout/" class="btn btn-danger my-1">Logout</a>
