--- a/templates/office/report.html
+++ b/templates/office/report.html
@@ -119,6 +119,7 @@
                     <div>{{s.date}}</div>
                 </div>
             </div>
+            {% item_stock_summary employee.shope.id s.id %}
         </div>
     {% endfor %}
   </div>
