--- a/templates/include/office/report.html
+++ b/templates/include/office/report.html
@@ -8,5 +8,6 @@
 </style>
 <div class="menu">
     <a  href="/office/report/" class="my-1 {% if request.path == '/office/report/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Bill</a>
+    <a  href="/office/employee_sell_item/" class="my-1 {% if request.path == '/office/employee_sell_item/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Employee sell Item</a>
     <a  href="/office/other_charges_report/" class="my-1 {% if request.path == '/office/other_charges_report/' %}btn btn-warning{% else %}btn btn-primary{% endif %}">Other Charges</a>
 </div>
