--- a/templates/ajax/office/item_search_by_category.html
+++ b/templates/ajax/office/item_search_by_category.html
@@ -32,7 +32,7 @@
         <div class="flex">
             <div>शिल्लक {{i.stock_weight}}</div>
             <div>शिल्लक नग  {{i.stock_qty}}</div>
-            <div>{{i.vehicle_number}}</div>
+            <div style="text-transform: uppercase;">{{i.vehicle_number}}</div>
         </div>
         <div class="m-3">
             <button class="btn btn-success form-control" type="submit" name="select_item">निवडा</button>
