--- a/templates/office/office_home.html
+++ b/templates/office/office_home.html
@@ -61,7 +61,7 @@
             <div class="p-2">
                 <div class="flex" style="justify-content: space-evenly;">
                     <div>{{s.party_name}}</div>
-                    <div>{{s.vehicle_number}}</div>
+                    <div style="text-transform: uppercase;">{{s.vehicle_number}}</div>
                 </div>
                 <div class="flex" style="justify-content: space-between;">
                     <div><b>एकूण</b> - &nbsp;&nbsp;&nbsp;&nbsp; वजन   <b>{{s.weight}}</b></div>
