--- a/templates/ajax/office/add_to_item_weight.html
+++ b/templates/ajax/office/add_to_item_weight.html
@@ -71,8 +71,8 @@
 <div class="containt"> <input type="number" name="aadat" value="0" class="check_zero3" id="आडत" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('आडत')"  required> </div>
 </div>
 <div class="other_charges">
-<div class="lable">शेअर्स</div>
-<div class="containt"> <input type="number" value="{% calculete_shears employee.id %}" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
+    <div class="lable">शेअर्स</div>
+    <div class="containt"> <input type="number" value="{% calculete_shears employee_id %}" name="shears" class="check_zero4" id="शेअर्स" oninput="total_amount_calculate('{{total_item_amount}}'),check_zero('शेअर्स')" required> </div>
 </div>
 <div class="other_charges">
 <div class="lable">इतर</div>
