--- a/templates/office/item_category.html
+++ b/templates/office/item_category.html
@@ -83,7 +83,7 @@
                     </div>
                     <div class="mb-3">
                       <label for="shears">Shears</label>
-                      <input type="text" id="shears" name="shears" value="{{i.shears}}" placeholder="Shears" class="form-control" required>
+                      <input type="number" step="any" id="shears" name="shears" value="{{i.shears}}" placeholder="Shears" class="form-control" required>
                     </div>
                     <div class="mb-2 mt-1">
                         <button type="submit" name="Edit_item_category" class="btn btn-primary">Add</button>
